--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,8 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     environment:
-      - NODE_ENV=development
+      NODE_ENV: development
+      NEXT_TELEMETRY_DISABLED: 1
     ports:
       - 3000:3000
     volumes:
